bug fixed and add eyes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,7 @@
   --grid-color-darken15: #d3ee82;
   --grid-color-darken20: #ccec6f;
   --snake-color: #38402e;
+  --snake-eyes-color: #bbbbbb;
   --food-color: #a84029;
   --panel-color: #acc95f;
   --button-color: #eeeeee;
